--- a/i/doodles/ruler_and_compass.html
+++ b/i/doodles/ruler_and_compass.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{people}</title>
+        <title>{ruler and compass}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-image:url(/mute-ante/i/doodles/background.jpg);
