--- a/i/doodles/peopletest.html
+++ b/i/doodles/peopletest.html
@@ -9,12 +9,13 @@
         body{background-image:url(/mute-ante/i/doodles/background.jpg);
             background-repeat:no-repeat;
             background-size:cover;
-            padding-top:20px;}
+            padding-top:20px;
+            background-attachment: fixed;}
         a, a::after, a::before{color: #080808}
         img{border: solid #05a1fc 2px}
         .header{border: solid 0px}
-        #drawings{line-height:0;column-count: 4; column-gap:6px}
-        #drawings img{margin-bottom: 3px;}
+        #drawings{line-height:0;column-count: 3; column-gap:10px}
+        #drawings img{margin-bottom: 5px;}
     </style>
     </head>
 
