--- a/i/doodles/peopletest.html
+++ b/i/doodles/peopletest.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{doodles}" style="height:120px;" class="header"><br>
+        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{people}" style="height:120px;" class="header"><br>
         <div id="drawings" style="width:650px">
         <img src="/mute-ante/i/doodles/annoyed.jpg" alt="annoyed" style="width:100%;">
         <img src="/mute-ante/i/doodles/guy.jpg" alt="guy" style="width:100%;">
