--- a/i/doodles/etc.html
+++ b/i/doodles/etc.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>{ruler and compass}</title>
+        <title>{etc}</title>
         <link href="/mute-ante/istyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{background-image:url(/mute-ante/i/doodles/background.jpg);
@@ -12,7 +12,7 @@
             padding-top:20px;
             background-attachment: fixed;}
         a, a::after, a::before{color: #080808}
-        img{border: solid #fc074c 2px}
+        img{border: solid #ffb400 2px}
         .header{border: solid 0px}
         #drawings{line-height:0;column-count: 3; column-gap:10px}
         #drawings img{margin-bottom: 5px;}
@@ -20,11 +20,15 @@
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/racheader.gif" alt="{ruler and compass}" style="height:120px;" class="header"><br>
-        <p>This used to be the thing i did the most since, maybe the start of 2021, and i have a big bunch of geometrical things, i PROMISE this won't be this empty forever</p>
+        <img src="/mute-ante/i/doodles/etcheader.gif" alt="{etc}" style="height:120px;" class="header"><br>
         <div id="drawings" style="width:650px">
-        <img src="/mute-ante/i/doodles/rac/arrow.jpg" alt="arrow" style="width:100%;">
-        <img src="/mute-ante/i/doodles/rac/mun_suno.jpg" alt="mun suno" style="width:100%;">
+        <img src="/mute-ante/i/doodles/rac/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
+        <img src="/mute-ante/i/doodles/rac/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
+        <img src="/mute-ante/i/doodles/rac/et.jpg" alt="et" style="width:100%;">
+        <img src="/mute-ante/i/doodles/rac/graphite.jpg" alt="graphite" style="width:100%;">
+        <img src="/mute-ante/i/doodles/rac/hypercube.jpg" alt="hypercube" style="width:100%;">
+        <img src="/mute-ante/i/doodles/rac/mobius.jpg" alt="mobius" style="width:100%;">
+        <img src="/mute-ante/i/doodles/rac/waveform.jpg" alt="waveform" style="width:100%;">
 
         </div>
     <br><a href="/mute-ante/i/doodles">go back</a>
