--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -13,6 +13,7 @@
     <h2>17/9/2022 12:36</h2>
     <p>
         I renamed the handdrawn page to <a href="/mute-ante/i/doodles">doodles</a>.
+        <b>(17:00)</b> Idea: make header gif thingies that are slightly different and random everytime someone loads the page.
     </p>
     <h2>16/9/2022 20:21</h2>
         <p>After snooping around for some cool websites to put in my <a href="/mute-ante/i/buttons">buttons</a> page and
