--- a/i/doodles.html
+++ b/i/doodles.html
@@ -11,6 +11,11 @@
             background-size:cover;
             padding-top:20px;}
         a, a::after, a::before{color: #080808}
+        .button::after, .button::before{content: ""}
+        .c, .m, .y{background-color: #f0f0f0;}
+        .c:hover{background-color: #003351;}
+        .m:hover{background-color: #640c25;}
+        .y:hover{background-color: #806014;}
     </style>
     </head>
 
@@ -18,12 +23,8 @@
         <img src="/mute-ante/i/doodles/doodles.gif" alt="{doodles}" style="height:120px;">
         <img src="/mute-ante/i/doodles/me_i_guess.png" alt="me i guess" style="margin-right: 50px; float: right;">
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
-        <ul>
-            <li><a href="/mute-ante/i/doodles/annoyed.jpg">annoyed face</a></li>
-            <li><a href="/mute-ante/i/doodles/cat_doodles.jpg">dumb cat doodles</a></li>
-            <li><a href="/mute-ante/i/doodles/cat_spotlight.jpg">cat in a spotlight</a></li>
-            <li><a href="/mute-ante/i/doodles/guy.jpg">a guy</a></li>
-            <li><a href="/mute-ante/i/doodles/other_guy.jpg">another guy</a></li>
-        </ul>
+        <a href="/mute-ante/i/doodles/people" class="button"><img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c"></a>
+        <a href="/mute-ante/i/doodles/ruler_and_compass" class="button"><img src="/mute-ante/i/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="m"></a>
+        <a href="/mute-ante/i/doodles/etc" class="button"></a><img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y"></a>
     <br><a href="/mute-ante/i">go back</a>
     </body>
