--- a/i/doodles/etc.html
+++ b/i/doodles/etc.html
@@ -22,13 +22,13 @@
     <body>
         <img src="/mute-ante/i/doodles/etcheader.gif" alt="{etc}" style="height:120px;" class="header"><br>
         <div id="drawings" style="width:650px">
-        <img src="/mute-ante/i/doodles/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
-        <img src="/mute-ante/i/doodles/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
-        <img src="/mute-ante/i/doodles/et.jpg" alt="et" style="width:100%;">
-        <img src="/mute-ante/i/doodles/graphite.jpg" alt="graphite" style="width:100%;">
-        <img src="/mute-ante/i/doodles/hypercube.jpg" alt="hypercube" style="width:100%;">
-        <img src="/mute-ante/i/doodles/mobius.jpg" alt="mobius" style="width:100%;">
-        <img src="/mute-ante/i/doodles/waveform.jpg" alt="waveform" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/et.jpg" alt="et" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/graphite.jpg" alt="graphite" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/hypercube.jpg" alt="hypercube" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/mobius.jpg" alt="mobius" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/waveform.jpg" alt="waveform" style="width:100%;">
 
         </div>
     <br><a href="/mute-ante/i/doodles">go back</a>
