--- a/i/doodles.html
+++ b/i/doodles.html
@@ -25,6 +25,6 @@
         <p>hi! this is a place where i'll put a bunch of my drawings, i like to doodle a lot and want to share some of them with you! i hope you like looking at them! (more to come (hopefully (probably)))</p>
         <a href="/mute-ante/i/doodles/people" class="button"><img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c"></a>
         <a href="/mute-ante/i/doodles/ruler_and_compass" class="button"><img src="/mute-ante/i/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="m"></a>
-        <a href="/mute-ante/i/doodles/etc" class="button"></a><img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y"></a>
+        <a href="/mute-ante/i/doodles/etc" class="button"><img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y"></a>
     <br><a href="/mute-ante/i">go back</a>
     </body>
