--- a/i/changelog.html
+++ b/i/changelog.html
@@ -10,6 +10,8 @@
 
     <h1>changelog</h1>
     <a href="/mute-ante/i">go back</a>
+    <h2>17/9/2022 17:10</h2>
+        <p>More drawings added to <a href="/mute-ante/i/doodles">doodles</a>, also now put into categories instead of on a list.</p>
     <h2>13/9/2022 16:49</h2>
         <p>Added some drawings to <a href="/mute-ante/i/doodles">doodles</a> and added a new <a href="/mute-ante/i/misc">miscellaneous</a> page for things that have no other place that i can put them.</p>
     <h2>12/9/2022 16:56</h2>
