--- a/i/doodles/people.html
+++ b/i/doodles/people.html
@@ -20,7 +20,8 @@
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{people}" style="height:120px;" class="header"><br>
+        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{people}" style="height:120px;" class="header">
+        <br><a href="/mute-ante/i/doodles">go back</a><br>
         <div id="drawings" style="width:650px">
         <img src="/mute-ante/i/doodles/people/annoyed.jpg" alt="annoyed" style="width:100%;">
         <img src="/mute-ante/i/doodles/people/guy.jpg" alt="guy" style="width:100%;">
@@ -31,5 +32,4 @@
         <img src="/mute-ante/i/doodles/people/sitting.jpg" alt="sitting" style="width:100%;">
         <img src="/mute-ante/i/doodles/people/stairs.jpg" alt="stairs" style="width:100%;">
         </div>
-    <br><a href="/mute-ante/i/doodles">go back</a>
     </body>
