--- a/i/doodles/people.html
+++ b/i/doodles/people.html
@@ -20,9 +20,9 @@
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{people}" style="height:120px;" class="header">
+        <img src="/mute-ante/i/doodles/peopleheader.gif" alt="{people}" style="height:120px; margin-bottom:20px" class="header">
         <br><a href="/mute-ante/i/doodles">go back</a><br>
-        <div id="drawings" style="width:650px">
+        <div id="drawings" style="width:650px; margin-top:20px">
         <img src="/mute-ante/i/doodles/people/annoyed.jpg" alt="annoyed" style="width:100%;">
         <img src="/mute-ante/i/doodles/people/guy.jpg" alt="guy" style="width:100%;">
         <img src="/mute-ante/i/doodles/people/aslep.jpg" alt="aslep" style="width:100%;">
