--- a/i/doodles/ruler_and_compass.html
+++ b/i/doodles/ruler_and_compass.html
@@ -20,9 +20,9 @@
     </head>
 
     <body>
-        <img src="/mute-ante/i/doodles/racheader.gif" alt="{ruler and compass}" style="height:120px;" class="header"><br>
+        <img src="/mute-ante/i/doodles/racheader.gif" alt="{ruler and compass}" style="height:120px; margin-bottom:20px" class="header"><br>
         <p>This used to be the thing i did the most since, maybe the start of 2021, and i have a big bunch of geometrical things, i PROMISE this won't be this empty forever</p>
-        <div id="drawings" style="width:650px">
+        <div id="drawings" style="width:650px; margin-top:20px">
         <img src="/mute-ante/i/doodles/rac/arrow.jpg" alt="arrow" style="width:100%;">
         <img src="/mute-ante/i/doodles/rac/mun_suno.jpg" alt="mun suno" style="width:100%;">
 
