--- a/i/doodles.html
+++ b/i/doodles.html
@@ -26,5 +26,5 @@
         <a href="/mute-ante/i/doodles/people" class="button"><img src="/mute-ante/i/doodles/people.gif" alt="people button" style="border: solid #05a1fc 5px" class="c"></a>
         <a href="/mute-ante/i/doodles/ruler_and_compass" class="button"><img src="/mute-ante/i/doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c 5px" class="m"></a>
         <a href="/mute-ante/i/doodles/etc" class="button"><img src="/mute-ante/i/doodles/etc.gif" alt="etc button" style="border: solid #ffb400 5px" class="y"></a>
-    <br><a href="/mute-ante/i">go back</a>
+    <br><br><a href="/mute-ante/i">go back</a>
     </body>
