--- a/i/doodles/etc.html
+++ b/i/doodles/etc.html
@@ -21,7 +21,7 @@
 
     <body>
         <img src="/mute-ante/i/doodles/etcheader.gif" alt="{etc}" style="height:120px; margin-bottom:20px" class="header"><br>
-        <br><a href="/mute-ante/i/doodles">go back</a>
+        <a href="/mute-ante/i/doodles">go back</a>
         <div id="drawings" style="width:650px; margin-top:20px">
         <img src="/mute-ante/i/doodles/etc/cat_doodles.jpg" alt="cat doodles" style="width:100%;">
         <img src="/mute-ante/i/doodles/etc/cat_spotlight.jpg" alt="cat spotlight" style="width:100%;">
