--- a/i/doodles/people.html
+++ b/i/doodles/people.html
@@ -12,10 +12,10 @@
             padding-top:20px;
             background-attachment: fixed;}
         a, a::after, a::before{color: #080808}
-        img{border: solid #05a1fc 2px}
+        img{border: solid #080808 3px}
         .header{border: solid 0px}
-        #drawings{line-height:0;column-count: 3; column-gap:10px}
-        #drawings img{margin-bottom: 5px;}
+        #drawings{line-height:0;column-count: 3; column-gap:3px}
+        #drawings img{margin-bottom: -3px;}
     </style>
     </head>
 
