--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -13,9 +13,11 @@
     <h2>17/9/2022 12:36</h2>
     <p>
         I renamed the handdrawn page to <a href="/mute-ante/i/doodles">doodles</a>.
-        <b>(17:00)</b> Idea: make header gif thingies that are slightly different and random everytime someone loads the page.
-        <b>(17:11)</b> I'M DONE!!!! I've separated all the doodles into categories, this took so longg, all the gifs...<br>
+        <br><b>(17:00)</b> Idea: make header gif thingies that are slightly different and random everytime someone loads the page.
+        <br><b>(17:11)</b> I'M DONE!!!! I've separated all the doodles into categories, this took so longg, all the gifs...<br>
         But i'd say it was worth it.
+        <br><b>(17:35)</b> After some nitpicking, i'd say i'm... satisfied with how it turned out. The colors didn't work well with the grid, 
+        especially the cyan.
     </p>
     <h2>16/9/2022 20:21</h2>
         <p>After snooping around for some cool websites to put in my <a href="/mute-ante/i/buttons">buttons</a> page and
