--- a/i/misc/archive.html
+++ b/i/misc/archive.html
@@ -9,7 +9,11 @@
 
     <h1>archive</h1>
         <ul>
-            <li><a href="/mute-ante/i/misc/archive/handdrawn">{handdrawn}</a>: the original handdrawn page before there were any drawings, with a little extra message.</li>
+            <li>monsuta: since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
+                <a href="/mute-ante/i/misc/archive/people_button.jpg">people</a> 
+                <a href="/mute-ante/i/misc/archive/ruler_and_compass_button.jpg">ruler and compass</a> 
+                <a href="/mute-ante/i/misc/archive/etc_button.jpg">etc (the culprit)</a></li>
+            <li><a href="/mute-ante/i/misc/archive/handdrawn">{handdrawn}</a>: the original handdraw/doodles page before there were any drawings, with a little extra message.</li>
             <li><a href="/mute-ante/i/misc/archive/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
             <li><a href="/mute-ante/i/misc/archive/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
         </ul>
