--- a/i/misc/archive.html
+++ b/i/misc/archive.html
@@ -9,7 +9,7 @@
 
     <h1>archive</h1>
         <ul>
-            <li>monsuta: since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
+            <li><b>handdrawn buttons</b>: since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
                 <a href="/mute-ante/i/misc/archive/people_button.jpg">people</a> 
                 <a href="/mute-ante/i/misc/archive/ruler_and_compass_button.jpg">ruler and compass</a> 
                 <a href="/mute-ante/i/misc/archive/etc_button.jpg">etc (the culprit)</a></li>
