--- a/sitemap.html
+++ b/sitemap.html
@@ -13,28 +13,44 @@
                 background-color: #ddba39; 
                 color:#000429;
                 text-decoration-color: #ddba39}
-            #statuscafe{margin-top: 20px; margin-bottom: 20px}
+            .nimi-mute{font-family: 'Atkinson Hyperlegible', sans-serif;}
+            @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         </style></head>
 
         <body>
         <div class="container">
         <h1>sitemap</h1>
+        <hr>
         <a href="/mute-ante">home</a>
         <ul>
             <li><a href="/mute-ante/interests">interests</a></li>
             <li><a href="/mute-ante/musicians">musicians</a></li>
-            <li><a href="/mute-ante/websites">websites</a></li>
+            <li><a href="/mute-ante/websites">websites</a>
+            <ul>
+                <li><a href="/mute-ante/websites/math">math and physics</a></li>
+                <li><a href="/mute-ante/websites/lang">language</a></li>
+                <li><a href="/mute-ante/websites/geo">geography</a></li>
+                <li><a href="/mute-ante/websites/misc">miscellaneous</a></li>
+            </ul></li>
             <li><a href="/mute-ante/blender">blender</a>
             <ul>
                 <li><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids</a></li>
                 <li><a href="/mute-ante/blenders/buttons">buttons</a></li>
                 <li><a href="/mute-ante/blenders/cmyk">cmyk</a></li>
             </ul></li>
-            <li><a href="/mute-ante/nimi-mute">nimi mute</a></li>
+            <li><a href="/mute-ante/nimi-mute" class="nimi-mute">nimi mute</a>
+            <ul>
+                <li><a href="/mute-ante/nimi-mute/sona-pini" class="nimi-mute">sona pini</a></li>
+                <li><a href="/mute-ante/nimi-mute/ona" class="nimi-mute">ona</a></li>
+                <li><a href="/mute-ante/nimi-mute/tomo-ni" class="nimi-mute">tomo ni</a></li>
+                <li><a href="/mute-ante/nimi-mute/suno" class="nimi-mute">suno</a></li>
+                <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo" class="nimi-mute">len pi laso telo</a></li>
+                <li><a href="/mute-ante/nimi-mute/jan" class="nimi-mute">jan</a></li>
+                <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu" class="nimi-mute">tomo pi esun lipu</a></li>
+            </ul></li>
             <li><a href="/mute-ante/difference">difference</a></li>
             <li><a href="/mute-ante/sitelog">sitelog</a></li>
             <li><a href="/mute-ante/i">{i}</a></li>
         </ul>
-        <hr>
 
     </div></body>
