--- a/sitemap.html
+++ b/sitemap.html
@@ -3,6 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>sitemap</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -14,7 +15,6 @@
                 color:#000429;
                 text-decoration-color: #ddba39}
             .nimi-mute{font-family: 'Atkinson Hyperlegible', sans-serif;}
-            @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');
         </style></head>
 
         <body>
