--- a/sitemap.html
+++ b/sitemap.html
@@ -14,7 +14,7 @@
                 background-color: #ddba39; 
                 color:#000429;
                 text-decoration-color: #ddba39}
-            .nimi-mute{font-family: 'Atkinson Hyperlegible', sans-serif;}
+            .nimi-mute{font-family: 'Atkinson Hyperlegible', sans-serif; font-size: larger}
         </style></head>
 
         <body>
