--- a/sitemap.html
+++ b/sitemap.html
@@ -14,7 +14,7 @@
                 background-color: #ddba39; 
                 color:#000429;
                 text-decoration-color: #ddba39}
-            .nimi-mute{font-family: 'Atkinson Hyperlegible', sans-serif; font-size: larger; line-height: 1.25;}
+            #nimi-mute li{font-family: 'Atkinson Hyperlegible', sans-serif; font-size: larger; line-height: 1;}
         </style></head>
 
         <body>
@@ -38,15 +38,15 @@
                 <li><a href="/mute-ante/blenders/buttons">buttons</a></li>
                 <li><a href="/mute-ante/blenders/cmyk">cmyk</a></li>
             </ul></li>
-            <li><a href="/mute-ante/nimi-mute" class="nimi-mute">nimi mute</a>
-            <ul>
-                <li><a href="/mute-ante/nimi-mute/sona-pini" class="nimi-mute">sona pini</a></li>
-                <li><a href="/mute-ante/nimi-mute/ona" class="nimi-mute">ona</a></li>
-                <li><a href="/mute-ante/nimi-mute/tomo-ni" class="nimi-mute">tomo ni</a></li>
-                <li><a href="/mute-ante/nimi-mute/suno" class="nimi-mute">suno</a></li>
-                <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo" class="nimi-mute">len pi laso telo</a></li>
-                <li><a href="/mute-ante/nimi-mute/jan" class="nimi-mute">jan</a></li>
-                <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu" class="nimi-mute">tomo pi esun lipu</a></li>
+            <li><a href="/mute-ante/nimi-mute" id="nimi-mute">nimi mute</a>
+            <ul id="nimi-mute">
+                <li><a href="/mute-ante/nimi-mute/sona-pini" >sona pini</a></li>
+                <li><a href="/mute-ante/nimi-mute/ona" >ona</a></li>
+                <li><a href="/mute-ante/nimi-mute/tomo-ni" >tomo ni</a></li>
+                <li><a href="/mute-ante/nimi-mute/suno" >suno</a></li>
+                <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo" >len pi laso telo</a></li>
+                <li><a href="/mute-ante/nimi-mute/jan" >jan</a></li>
+                <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu" >tomo pi esun lipu</a></li>
             </ul></li>
             <li><a href="/mute-ante/difference">difference</a></li>
             <li><a href="/mute-ante/sitelog">sitelog</a></li>
