--- a/sitemap.html
+++ b/sitemap.html
@@ -38,7 +38,7 @@
                 <li><a href="/mute-ante/blenders/buttons">buttons</a></li>
                 <li><a href="/mute-ante/blenders/cmyk">cmyk</a></li>
             </ul></li>
-            <li><a href="/mute-ante/nimi-mute" id="nimi-mute">nimi mute</a>
+            <li id="nimi-mute"><a href="/mute-ante/nimi-mute">nimi mute</a>
             <ul id="nimi-mute">
                 <li><a href="/mute-ante/nimi-mute/sona-pini" >sona pini</a></li>
                 <li><a href="/mute-ante/nimi-mute/ona" >ona</a></li>
