--- a/sitemap.html
+++ b/sitemap.html
@@ -14,7 +14,7 @@
                 background-color: #ddba39; 
                 color:#000429;
                 text-decoration-color: #ddba39}
-            #nimi-mute li{font-family: 'Atkinson Hyperlegible', sans-serif; font-size: larger; line-height: 1;}
+            .nimi-mute, #nimi-mute li{font-family: 'Atkinson Hyperlegible', sans-serif; font-size: larger; line-height: 1;}
         </style></head>
 
         <body>
@@ -38,7 +38,7 @@
                 <li><a href="/mute-ante/blenders/buttons">buttons</a></li>
                 <li><a href="/mute-ante/blenders/cmyk">cmyk</a></li>
             </ul></li>
-            <li id="nimi-mute"><a href="/mute-ante/nimi-mute">nimi mute</a>
+            <li class="nimi-mute"><a href="/mute-ante/nimi-mute">nimi mute</a>
             <ul id="nimi-mute">
                 <li><a href="/mute-ante/nimi-mute/sona-pini" >sona pini</a></li>
                 <li><a href="/mute-ante/nimi-mute/ona" >ona</a></li>
