--- a/sitemap.html
+++ b/sitemap.html
@@ -14,7 +14,7 @@
                 background-color: #ddba39; 
                 color:#000429;
                 text-decoration-color: #ddba39}
-            .nimi-mute, #nimi-mute li{font-family: 'Atkinson Hyperlegible', sans-serif; font-size: larger; line-height: 1;}
+            .nimi-mute, #nimi-mute li{font-family: 'Atkinson Hyperlegible', sans-serif; line-height: 1;}
         </style></head>
 
         <body>
