--- a/sitemap.html
+++ b/sitemap.html
@@ -4,17 +4,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>sitemap</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
-            .pyramid{
-                background-color: #000429; 
-                color:#ddba39}
-            .pyramid:hover{
-                background-color: #ddba39; 
-                color:#000429;
-                text-decoration-color: #ddba39}
-            .nimi-mute, #nimi-mute li{font-family: 'Atkinson Hyperlegible', sans-serif; line-height: 1;}
+            ul{margin:0px;}
         </style></head>
 
         <body>
@@ -38,8 +32,8 @@
                 <li><a href="/mute-ante/blenders/buttons">buttons</a></li>
                 <li><a href="/mute-ante/blenders/cmyk">cmyk</a></li>
             </ul></li>
-            <li class="nimi-mute"><a href="/mute-ante/nimi-mute">nimi mute</a>
-            <ul id="nimi-mute">
+            <li><a href="/mute-ante/nimi-mute">nimi mute</a>
+            <ul>
                 <li><a href="/mute-ante/nimi-mute/sona-pini" >sona pini</a></li>
                 <li><a href="/mute-ante/nimi-mute/ona" >ona</a></li>
                 <li><a href="/mute-ante/nimi-mute/tomo-ni" >tomo ni</a></li>
