--- a/i/doodles/etc.html
+++ b/i/doodles/etc.html
@@ -30,5 +30,7 @@
         <img src="/mute-ante/i/doodles/etc/hypercube.jpg" alt="hypercube" style="width:100%;">
         <img src="/mute-ante/i/doodles/etc/mobius.jpg" alt="mobius" style="width:100%;">
         <img src="/mute-ante/i/doodles/etc/waveform.jpg" alt="waveform" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/new.jpg" alt="new" style="width:100%;">
+        <img src="/mute-ante/i/doodles/etc/new2.jpg" alt="new2" style="width:100%;">
         </div>
     </body>
