--- a/i/misc.html
+++ b/i/misc.html
@@ -8,12 +8,16 @@
     <body>
 
     <h1>misc</h1>
+    <p>After going down the stairs and into the basement, you wander into a green door.
+        <br>It seems to have the words "staff only" written on it, but it's been scribbled over.
+        <br>You step into a dark room, somehow lit by a monochromatic green light. It's slightly nauseating.
+        <br>It seems to be a place the webmaster spends some time in, but it's completely empty.
+        <br>You see a drawing table. On it is a book and a folder. Besides the table is a wall covered in sticky notes.
+    </p>
         <ul>
-            <li><a href="/mute-ante/i/misc/journal">basement journal</a>: things i felt like writing</li>
-            <li><a href="/mute-ante/i/misc/phrases">phrases</a>: random phrases</li>
-            <li><a href="/mute-ante/i/misc/archive">archive</a>: things that used to be here</li>
+            <li><a href="/mute-ante/i/misc/journal">open the book</a></li>
+            <li><a href="/mute-ante/i/misc/phrases">look at the sticky notes</a></li>
+            <li><a href="/mute-ante/i/misc/archive">open the folder</a></li>
+            <li><a href="/mute-ante/i">walk back out the door</a></li>
         </ul>
-
-        > <a href="/mute-ante/i">go back</a>
-        <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
