--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -3,13 +3,20 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>> basement journal</title>
+        <title>> journal</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
     <body>
 
     <h1>basement journal</h1>
-    <img src="/mute-ante/i/misc/workbench.png" alt="workbench" style="margin-right: 50px; float: right; height: 250px;">
+    <p>You gingerly open the book, looking out for anyone that calls you out. No one did.
+        <br>You read it and realize it's a journal the webmaster keeps for new things that happened in the site.
+    </p>
     > <a href="/mute-ante/i/misc">go back</a>
+    <h2>19/9/2022 18:02</h2>
+    <p>
+        Now the miscellaneous page is like a text-only rpg! sort of... Why not?! This whole basement thing is already all over the place.
+        <br>Someday i'll put the phrases into actual sticky notes, who knows?!?!
+    </p>
     <h2>17/9/2022 12:36</h2>
     <p>
         I renamed the handdrawn page to <a href="/mute-ante/i/doodles">doodles</a>.
