--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -3,13 +3,16 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>> phrases</title>
+        <title>> wall</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
     <body>
 
-    <h1>phrases</h1>
-    <img src="/mute-ante/i/misc/talk.png" alt="workbench" style="margin-right: 50px; float: right; height: 250px;">
+    <h1>wall</h1>
+    <p>You look closer at the sticky notes on the wall and see there are phrases written in each one.
+        <br>There doesn't seem to be any pattern to them.
+    </p>
         <ul>
+            <li>"Why do songs keep getting stuck in my head..."</li>
             <li>"being good feels good."</li>
             <li>"It feels cozy down here."</li>
             <li>"Thoughts are nice, calm and collected."</li>
@@ -24,5 +27,4 @@
         </ul>
 
         > <a href="/mute-ante/i/misc">go back</a>
-        <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
