--- a/i/misc/archive.html
+++ b/i/misc/archive.html
@@ -3,20 +3,25 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>> archive</title>
+        <title>> folder</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
     <body>
 
-    <h1>archive</h1>
+    <h1>folder</h1>
+    <p>You open the folder to find things that seemingly were once used either here or upstairs, but weren't used or were removed.
+        <br>But the webmaster cared enough to save them here so they wouldn't be lost forever.
+    </p>
         <ul>
             <li><b>handdrawn buttons</b>: since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
                 <a href="/mute-ante/i/misc/archive/people_button.jpg">people</a> 
                 <a href="/mute-ante/i/misc/archive/ruler_and_compass_button.jpg">ruler and compass</a> 
                 <a href="/mute-ante/i/misc/archive/etc_button.jpg">etc (the culprit)</a></li>
-            <li><a href="/mute-ante/i/misc/archive/handdrawn">{handdrawn}</a>: the original handdraw/doodles page before there were any drawings, with a little extra message.</li>
+            <li><a href="/mute-ante/i/misc/archive/handdrawn">{handdrawn}</a>: the original handdrawn/doodles page before there were any drawings, with a little extra message.</li>
+            <li>When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
+                once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.
+                <a href="/mute-ante/i/misc/archive/original1.jpg">try #1</a> <a href="/mute-ante/i/misc/archive/original2.jpg">try #2</a></li>
             <li><a href="/mute-ante/i/misc/archive/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
             <li><a href="/mute-ante/i/misc/archive/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
         </ul>
         > <a href="/mute-ante/i/misc">go back</a>
-        <iframe src="https://john.citrons.xyz/embed?ref=cvni1981.github.io/mute-ante/" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;position:fixed;bottom:5px;"></iframe>
     </body>
