--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -4,26 +4,30 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>> wall</title>
-        <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
+    <style>
+        #notes{line-height:0;column-count: 5; column-gap:15px}
+        #notes div{margin-bottom: 10px;border: solid #15c405 5px; background-color: #156b05;}
+    </style></head>
     <body>
 
     <h1>wall</h1>
     <p>You look closer at the sticky notes on the wall and see there are phrases written in each one.
         <br>There doesn't seem to be any pattern to them.
     </p>
-        <ul>
-            <li>"Why do songs keep getting stuck in my head..."</li>
-            <li>"being good feels good."</li>
-            <li>"It feels cozy down here."</li>
-            <li>"Thoughts are nice, calm and collected."</li>
-            <li>"i feel small :/"</li>
-            <li>"Who cares about the future if i can't feel good today"</li>
-            <li>"B I G S P O O N S"</li>
-            <li>"A boat in the middle of nowhere, a non-euclidean midnight train and an empty office building."</li>
-            <li>"This product causes cancer" "then stop selling it h"</li>
-            <li>"Oh, when july arrives~"</li>
-            <li>"Thinking optional."</li>
-            <li>"We're feeling pretty loopy today huh?"</li>
+    <div id="notes"></div>
+            <div>"Why do songs keep getting stuck in my head..."</div>
+            <div>"being good feels good."</div>
+            <div>"It feels cozy down here."</div>
+            <div>"Thoughts are nice, calm and collected."</div>
+            <div>"i feel small :/"</div>
+            <div>"Who cares about the future if i can't feel good today"</div>
+            <div>"B I G S P O O N S"</div>
+            <div>"A boat in the middle of nowhere, a non-euclidean midnight train and an empty office building."</div>
+            <div>"This product causes cancer" "then stop selling it h"</div>
+            <div>"Oh, when july arrives~"</div>
+            <div>"Thinking optional."</div>
+            <div>"We're feeling pretty loopy today huh?"</div>
         </ul>
 
         > <a href="/mute-ante/i/misc">go back</a>
