--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -15,7 +15,7 @@
     <p>You look closer at the sticky notes on the wall and see there are phrases written in each one.
         <br>There doesn't seem to be any pattern to them.
     </p>
-    <div id="notes"></div>
+    <div id="notes">
             <div>"Why do songs keep getting stuck in my head..."</div>
             <div>"being good feels good."</div>
             <div>"It feels cozy down here."</div>
@@ -28,7 +28,7 @@
             <div>"Oh, when july arrives~"</div>
             <div>"Thinking optional."</div>
             <div>"We're feeling pretty loopy today huh?"</div>
-        </ul>
+        </div>
 
         > <a href="/mute-ante/i/misc">go back</a>
     </body>
