--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -6,8 +6,13 @@
         <title>> wall</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        #notes{line-height:0;column-count: 5; column-gap:auto}
-        #notes div{margin-bottom: 10px;border: solid #15c405 5px; background-color: #156b05; width: 150px; height:150px}
+        #notes{column-count: 5; column-gap:auto}
+        #notes div{margin-bottom: 10px;
+            border: solid #15c405 5px;
+            background-color: #156b05; 
+            width: 150px;
+            height:150px;
+            margin: 10px}
     </style></head>
     <body>
 
