--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -12,7 +12,7 @@
             background-color: #156b05; 
             width: 150px;
             height:150px;
-            margin: 10px}
+            padding: 10px}
     </style></head>
     <body>
 
