--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -10,7 +10,7 @@
         #notes div{margin-bottom: 10px;
             border: solid #15c405 5px;
             background-color: #156b05; 
-            width: 150px;
+            max-width: 150px;
             height:150px;
             padding: 10px}
     </style></head>
