--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -11,7 +11,7 @@
             border: solid #15c405 5px;
             background-color: #156b05; 
             max-width: 150px;
-            height:150px;
+            min-height: 150px;
             padding: 10px}
     </style></head>
     <body>
