--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -6,7 +6,7 @@
         <title>> wall</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        #notes{column-count: 5; column-gap:auto}
+        #notes{column-count: 5; column-gap: 10px}
         #notes div{margin-bottom: 10px;
             border: solid #15c405 5px;
             background-color: #156b05; 
