--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -18,7 +18,7 @@
 
     <h1>wall</h1>
     <p>You look closer at the sticky notes on the wall and see there are phrases written in each one.
-    > <a href="/mute-ante/i/misc">go back</a>
+    <br>> <a href="/mute-ante/i/misc">go back</a>
     </p>
     <div id="notes">
             <div>"Why do songs keep getting stuck in my head..."</div>
