--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -6,12 +6,12 @@
         <title>> wall</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        #notes{column-count: 4; column-gap: 10px}
+        #notes{column-count: 6; column-gap: 10px}
         #notes div{margin-bottom: 10px;
             border: solid #15c405 5px;
             background-color: #156b05; 
             max-width: 150px;
-            min-height: 150px;
+            height: 150px;
             padding: 10px}
     </style></head>
     <body>
