--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -16,6 +16,7 @@
     <p>
         Now the miscellaneous page is like a text-only rpg! sort of... Why not?! This whole basement thing is already all over the place.
         <br>Someday i'll put the phrases into actual sticky notes, who knows?!?!
+        <br><b>(19:04)</b> I did it yay
     </p>
     <h2>17/9/2022 12:36</h2>
     <p>
