--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -23,17 +23,17 @@
     <br>> <a href="/mute-ante/i/misc">go back</a>
     </p>
     <div id="notes">
-            <div>"Why do songs keep getting stuck in my head..."</div>
-            <div>"being good feels good."</div>
-            <div>"It feels cozy down here."</div>
-            <div>"Thoughts are nice, calm and collected."</div>
-            <div>"i feel small :/"</div>
-            <div>"Who cares about the future if i can't feel good today"</div>
-            <div>"B I G S P O O N S"</div>
-            <div>"A boat in the middle of nowhere, a non-euclidean midnight train and an empty office building."</div>
-            <div>"This product causes cancer" "then stop selling it h"</div>
-            <div>"Oh, when july arrives~"</div>
-            <div>"Thinking optional."</div>
-            <div>"We're feeling pretty loopy today huh?"</div>
-        </div>
-    </body>
+        <div>I wonder if anyone's ever come down here</div>
+        <div>Why do songs keep getting stuck in my head...</div>
+        <div>being good feels good.</div>
+        <div>It feels cozy down here.</div>
+        <div>Thoughts are nice, calm and collected.</div>
+        <div>i feel small :/</div>
+        <div>Who cares about the future if i can't feel good today</div>
+        <div>B I G   S P O O N</div>
+        <div>A boat in the middle of nowhere, a non-euclidean midnight train and an empty office building.</div>
+        <div>This product causes cancer<br>then stop selling it h</div>
+        <div>Oh, when july arrives~</div>
+        <div>Thinking optional.</div>
+        <div>We're feeling pretty loopy today huh?</div>
+    </div></body>
