--- a/indextest.html
+++ b/indextest.html
@@ -35,8 +35,8 @@
         <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a> <b>·</b> 
         <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger" title="music i like enough to purchase">bandcamp (fan)</a> <b>·</b> 
         <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger" title="things i feel like telling people">status.cafe</a><br>
-        <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. <span style="color:#05a1fc">●</span><span style="color:#fc074c">●</span><span style="color:#ffb400">●</span></p></div><br>
-        <div class="website-counter"></div>
+        <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. <span style="color:#05a1fc">●</span><span style="color:#fc074c">●</span><span style="color:#ffb400">●</span></p><br>
+        You are person no.<div class="website-counter"></div>to come here!</div>
     <div class="this-container" style="font-size:larger">
             <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
             <a href="/mute-ante/musicians">musicians</a> good music people<br>
