--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -12,6 +12,15 @@
         <br>You read it and realize it's a journal the webmaster keeps for new things that happened in the site.
     </p>
     > <a href="/mute-ante/i/misc">go back</a>
+    <h2>20/9/2022 21:46</h2>
+    <p>
+        So... I kinda wanted to add a website visitor counter to this, so i can tell if someone's actually coming here.
+        <br>But many solutions just counted visits and just reloading uppded the count, and ones which counted separate visitors
+        required tracking the visitor's IP address which i DEFINITELY do not want to do.
+        <br>So... I guess i'm staying in the dark.
+        <br>Also i kinda want to make this look like an actual book, or with pages or something.
+        <br>But that's tomorrow.
+    </p>
     <h2>19/9/2022 18:02</h2>
     <p>
         Now the miscellaneous page is like a text-only rpg! sort of... Why not?! This whole basement thing is already all over the place.
