--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -8,10 +8,17 @@
     <body>
 
     <h1>basement journal</h1>
-    <p>You gingerly open the book, looking out for anyone that calls you out. No one did.
-        <br>You read it and realize it's a journal the webmaster keeps for new things that happened in the site.
-    </p>
+    <p>You gingerly open the book, looking out for anyone that calls you out. No one did.</p>
     > <a href="/mute-ante/i/misc">go back</a>
+    <h2>22/9/2022 14:50</h2>
+    <p>
+        To-do:
+        <ul>
+            <li>make this book into an actual book (it'll take learning on click and some javascript)</li>
+            <li>make the folder into something more interesting than a list</li>
+        </ul>
+        <br>No guarantees it'll all be done today though. Making websites takes time.
+    </p>
     <h2>20/9/2022 21:46</h2>
     <p>
         So... I kinda wanted to add a website visitor counter to this, so i can tell if someone's actually coming here.
