--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -9,7 +9,9 @@
         .entry{background-color: #156b05;
         border: solid #15c405 5px;
         padding: 10px;
-        margin: 10px}
+        margin: 20px;
+        margin-left: 0px;
+        width: 750px}
         h2{margin-top:0px}
     </style></head>
     <body>
