--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -9,6 +9,7 @@
         .entry{background-color: #156b05;
         border: solid #15c405 5px;
         padding: 10px;
+        padding-left: 20px;
         margin: 20px;
         margin-left: 0px;
         width: 750px}
