--- a/i/misc.html
+++ b/i/misc.html
@@ -12,10 +12,10 @@
         <br>It seems to have the words "staff only" written on it, but it's been scribbled over.
         <br>You step into a dark room, somehow lit by a monochromatic green light. It's slightly nauseating.
         <br>It seems to be a place the webmaster spends some time in, but it's completely empty.
-        <br>You see a drawing table. On it is a book and a folder. Besides the table is a wall covered in sticky notes.
+        <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a wall covered in sticky notes.
     </p>
         <ul>
-            <li><a href="/mute-ante/i/misc/journal">open the book</a></li>
+            <li><a href="/mute-ante/i/misc/journal">open the notebook</a></li>
             <li><a href="/mute-ante/i/misc/phrases">look at the sticky notes</a></li>
             <li><a href="/mute-ante/i/misc/archive">open the folder</a></li>
             <li><a href="/mute-ante/i">walk back out the door</a></li>
