--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -13,7 +13,7 @@
         margin: 20px auto;
         width: 750px}
         h2{margin-top:16px}
-        a{text-decoration-color: #156b05}
+        a{text-decoration-color: #0a3303}
     </style></head>
     <body style="padding: 0px">
 
