made the dark green a bit darker

--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -13,7 +13,7 @@
         margin: 20px auto;
         width: 750px}
         h2{margin-top:16px}
-        a{text-decoration-color: #0a3303}
+        a{text-decoration-color: #072502;}
         .h{text-decoration-color: #808080}
         .h:hover{text-decoration-color: #15c405}
     </style></head>
