--- a/i/misc/journal.html
+++ b/i/misc/journal.html
@@ -11,7 +11,8 @@
         padding: 10px;
         padding-left: 20px;
         margin: 20px auto;
-        width: 750px}
+        width: 750px;
+        box-shadow: #072502 5px 5px}
         h2{margin-top:16px}
         a{text-decoration-color: #072502;}
         .h{text-decoration-color: #808080}
