--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -14,7 +14,8 @@
             background-color: #156b05; 
             max-width: 150px;
             height: 150px;
-            padding: 10px}
+            padding: 10px;
+            box-shadow: #072502 5px 5px}
     </style></head>
     <body>
 
