--- a/i/misc/archive.html
+++ b/i/misc/archive.html
@@ -8,8 +8,7 @@
     <body>
 
     <h1>folder</h1>
-    <p>You open the folder to find things that seemingly were once used either here or upstairs, but weren't used or were removed.
-        <br>But the webmaster cared enough to save them here so they wouldn't be lost forever.
+    <p>You open the folder.
     </p>
         <ul>
             <li><b>handdrawn buttons</b>: since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
