--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -20,7 +20,7 @@
     <body>
 
     <h1>wall</h1>
-    <p>You look closer at the sticky notes on the wall and see there are phrases written in each one.
+    <p>You look closer at the sticky notes on the wall.
     <br>> <a href="/mute-ante/i/misc">go back</a>
     </p>
     <div id="notes">
