--- a/i/misc.html
+++ b/i/misc.html
@@ -10,8 +10,7 @@
     <h1>misc</h1>
     <p>After going down the stairs and into the basement, you wander into a green door.
         <br>It seems to have the words "staff only" written on it, but it's been scribbled over.
-        <br>You step into a dark room, somehow lit by a monochromatic green light. It's slightly nauseating.
-        <br>It seems to be a place the webmaster spends some time in, but it's completely empty.
+        <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
         <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a wall covered in sticky notes.
     </p>
         <ul>
