--- a/sitelog.html
+++ b/sitelog.html
@@ -30,6 +30,8 @@
         <hr>
         <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
         <hr>
+        <h2>→ 20/9/2022 20:14</h2>
+        <p>I have a <a href="https://cvni81.123guestbook.com/">guestbook</a> now! If you've got any feedback to give or any questions, you can say them there.</p>
         <h2>→ 11/9/2022 18:15</h2>
         <p>Some "new" blender <a href="/mute-ante/blenders/cmyk">cmyk</a> things! (Actually i added them a bit ago but removed them)</p>
         <h2>→ 11/9/2022 18:15</h2>
