--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -27,6 +27,7 @@
         <div>I wonder if anyone's ever come down here</div>
         <div>Why do songs keep getting stuck in my head...</div>
         <div>being good feels good.</div>
+        <div>I don't know if adding that guestbook was a good idea</div>
         <div>It feels cozy down here.</div>
         <div>Thoughts are nice, calm and collected.</div>
         <div>i feel small :/</div>
