--- a/i/misc/folder.html
+++ b/i/misc/folder.html
@@ -4,7 +4,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>> folder</title>
-        <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
+    <style>
+        .details{max-width: 750px;
+        border-left: solid #15c405 3px}
+    </style></head>
     <body>
 
     <h1>folder</h1>
