--- a/i/misc/folder.html
+++ b/i/misc/folder.html
@@ -6,7 +6,7 @@
         <title>> folder</title>
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        .details{max-width: 750px;
+        details{max-width: 750px;
         border-left: solid #15c405 3px}
     </style></head>
     <body>
