--- a/i/misc/folder.html
+++ b/i/misc/folder.html
@@ -15,7 +15,7 @@
     <p>You open the folder.
     </p>
     <details>
-        <summary><a>handdrawn</a></summary>
+        <summary><a>handdrawn / doodle</a></summary>
         When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
         once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.
         <ul>
