--- a/i/misc/folder.html
+++ b/i/misc/folder.html
@@ -7,7 +7,8 @@
         <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         details{max-width: 750px;
-        border-left: solid #15c405 3px}
+        border-left: solid #15c405 3px;
+        padding: 13px}
     </style></head>
     <body>
 
