--- a/i/misc/folder.html
+++ b/i/misc/folder.html
@@ -8,7 +8,7 @@
     <style>
         details{max-width: 750px;
         border-left: solid #15c405 3px;
-        padding: 13px}
+        padding: 0 13px}
     </style></head>
     <body>
 
