--- a/i/misc/phrases.html
+++ b/i/misc/phrases.html
@@ -26,6 +26,7 @@
     <div id="notes">
         <div>I wonder if anyone's ever come down here</div>
         <div>Why do songs keep getting stuck in my head...</div>
+        <div>Hate only brings you hate.</div>
         <div>being good feels good.</div>
         <div>I don't know if adding that guestbook was a good idea</div>
         <div>It feels cozy down here.</div>
