--- a/indexnew.html
+++ b/indexnew.html
@@ -13,9 +13,9 @@
             grid-template-columns: 350px 1px auto}
         </style></head>
 
-    <body>
+    <body style="margin:0px">
     <div class="all">
-    <div style="padding:10px">
+    <div style="padding:20px; background-color: #404040;">
     <h1>cvni81</h1>
     <p>Hi! Welcome to my slice of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
@@ -28,7 +28,7 @@
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>
     Make yourself at home!</p>
     </div>
-    <div style="border:solid #f0f0f0 5px"></div>
+    <div style="border:solid #f0f0f0 2px"></div>
     <div></div>
     </div>
     </body>
